--- a/day11/exam2/exam2.vcxproj
+++ b/day11/exam2/exam2.vcxproj
@@ -148,6 +148,7 @@
     <ClCompile Include="1.cpp" />
     <ClCompile Include="2.cpp" />
     <ClCompile Include="3.cpp" />
+    <ClCompile Include="4.cpp" />
     <ClCompile Include="exam2.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
