--- a/day11/exam2/exam2.vcxproj.filters
+++ b/day11/exam2/exam2.vcxproj.filters
@@ -50,6 +50,9 @@
     <ClCompile Include="3.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="4.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="exam2.rc">
