--- a/day18/exam4/exam4.vcxproj
+++ b/day18/exam4/exam4.vcxproj
@@ -142,6 +142,7 @@
     <ClInclude Include="exam4.h" />
     <ClInclude Include="game.h" />
     <ClInclude Include="ObjectBullet.h" />
+    <ClInclude Include="ObjectEffectBulletDie.h" />
     <ClInclude Include="ObjectPlayer.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="stdafx.h" />
@@ -152,6 +153,7 @@
     <ClCompile Include="exam4.cpp" />
     <ClCompile Include="game.cpp" />
     <ClCompile Include="ObjectBullet.cpp" />
+    <ClCompile Include="ObjectEffectBulletDie.cpp" />
     <ClCompile Include="ObjectPlayer.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
