--- a/day18/exam4/exam4.vcxproj
+++ b/day18/exam4/exam4.vcxproj
@@ -143,6 +143,7 @@
     <ClInclude Include="game.h" />
     <ClInclude Include="ObjectBullet.h" />
     <ClInclude Include="ObjectEffectBulletDie.h" />
+    <ClInclude Include="ObjectEffectPlayerDie.h" />
     <ClInclude Include="ObjectPlayer.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="stdafx.h" />
@@ -154,6 +155,7 @@
     <ClCompile Include="game.cpp" />
     <ClCompile Include="ObjectBullet.cpp" />
     <ClCompile Include="ObjectEffectBulletDie.cpp" />
+    <ClCompile Include="ObjectEffectPlayerDie.cpp" />
     <ClCompile Include="ObjectPlayer.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
