--- a/day18/exam4/exam4.vcxproj.filters
+++ b/day18/exam4/exam4.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClInclude Include="ObjectEffectBulletDie.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="ObjectEffectPlayerDie.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -66,6 +69,9 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="ObjectEffectBulletDie.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="ObjectEffectPlayerDie.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
