--- a/day18/exam4/exam4.vcxproj.filters
+++ b/day18/exam4/exam4.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClInclude Include="ObjectEffectPlayerDie.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="ObjectMissile.h">
+      <Filter>소스 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -72,6 +75,9 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="ObjectEffectPlayerDie.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="ObjectMissile.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
