--- a/day18/exam4/exam4.vcxproj
+++ b/day18/exam4/exam4.vcxproj
@@ -146,6 +146,7 @@
     <ClInclude Include="ObjectEffectPlayerDie.h" />
     <ClInclude Include="ObjectMissile.h" />
     <ClInclude Include="ObjectPlayer.h" />
+    <ClInclude Include="ObjectTurret.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
@@ -159,6 +160,7 @@
     <ClCompile Include="ObjectEffectPlayerDie.cpp" />
     <ClCompile Include="ObjectMissile.cpp" />
     <ClCompile Include="ObjectPlayer.cpp" />
+    <ClCompile Include="ObjectTurret.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
