--- a/day18/exam4/exam4.vcxproj.filters
+++ b/day18/exam4/exam4.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClInclude Include="ObjectMissile.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="ObjectTurret.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -78,6 +81,9 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="ObjectMissile.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="ObjectTurret.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
